# how-to

./: .gitignore  404.html  Dockerfile  README.md  Taskfile.yaml  codemeta.json  index.html  mkdocs.yaml  project.toml  pyproject.toml
.github/workflows/: build.yaml  dind.yaml  docs.yaml
capture-json-stdout/: index.html
capture-stdout/: index.html
conditional-workflows/: index.html
cwl-workflows/: capture-json-stdout.cwl  capture-stdout.cwl  conditional-workflows.cwl  custom-types.cwl  custom-types.yaml  environment-variable.cwl  nested-workflow.cwl  return-output-file.cwl  runtime-file.cwl  scatter-input-parameters.cwl  scatter-workflows.cwl
cwl/01-output/: return-output-file.cwl
cwl/02-stdout/: capture-stdout.cwl
cwl/03-json-stdout/: capture-json-stdout.cwl
cwl/04-env/: environment-variable.cwl
cwl/05-runtime/: runtime.cwl
cwl/06-nested-workflows/: nested-workflow.cwl
cwl/07-scatter-workflows/: scatter-input-parameters.cwl
cwl/08-conditional-workflows/: conditional-workflows.cwl
docs/: capture-json-stdout.ipynb  capture-stdout.ipynb  conditional-workflows.ipynb  environment-file.ipynb  environment-variable.ipynb  index.md  nested-workflows.ipynb  return-output-file.ipynb  runtime-file.ipynb  scatter-input-parameters.ipynb  scatter-workflows.ipynb  test.ipynb
environment-variable/: index.html
nested-workflows/: index.html
return-output-file/: index.html
runtime-file/: index.html
scatter-input-parameters/: index.html
scatter-workflows/: index.html
schemas/: project.schema.yaml
search/: search_index.json
(+4 files in other folders)
