[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "how-to"
dynamic = ["version"]
description = "Application Package CWL How-To's"
readme = "README.md"
license = "Apache-2.0"
keywords = []

authors = [
    { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" }
]
dependencies = [
    "cwltool",
    "ipykernel",
    "bash_kernel",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.hatch.version]
path = "about.py"

[tool.hatch.envs.default]
python = "3.11"